book view and logic progress